# revng

./: CMakeLists.txt
docs/: Pipeline.md
include/revng/ABI/: ApplyRegisterStateDeductions.h  CallingConventionTrait.h  DefaultFunctionPrototype.h  Definition.h
include/revng/ABIAnalyses/: Common.h
include/revng/ADT/: STLExtras.h
include/revng/EarlyFunctionAnalysis/: ControlFlowGraphCache.h  FunctionSummaryOracle.h  IRHelpers.h
include/revng/Lift/: AdvancedValueInfoPass.h  LiftPipe.h  LinkSupportPipe.h
include/revng/Model/: ABI.h  Architecture.h  ArrayType.h  Binary.h  ConstType.h  DefinedType.h  DynamicFunction.h  Function.h  NoType.h  PointerType.h  PrimitiveType.h  Processing.h  Register.h  Relocation.h  RelocationType.h  Section.h  Segment.h  ToolHelpers.h  Type.h  Type2.h  VerifyHelper.h
include/revng/Pipeline/: Analysis.h  ContainerEnumerator.h  CopyPipe.h  ExecutionContext.h  GenericLLVMPipe.h  Invokable.h  Kind.h  LLVMContainer.h  LLVMGlobalKindBase.h  Loader.h  Pipe.h  Rank.h  Runner.h  Step.h  Target.h
include/revng/PipelineC/: ForwardDeclarations.h  ForwardDeclarationsC.h  PipelineC.h  Prototypes.h
include/revng/Pipes/: FileContainer.h  Kinds.h  PopulateTargetListContainer.h  Ranks.h  TaggedFunctionKind.h
include/revng/Recompile/: CompileModulePipe.h  LinkForTranslationPipe.h
include/revng/RegisterUsageAnalyses/: ReachingDefinitions.h
include/revng/Support/: MetaAddress.h  TaggedFunctionPass.h  revng.h
include/revng/TupleTree/: TupleTree.h
lib/: CMakeLists.txt
lib/ABI/: ApplyRegisterStateDeductions.cpp  CMakeLists.txt  DefaultFunctionPrototype.cpp  Definition.cpp
lib/ABI/Analyses/: ConvertToCABIFunctionType.cpp
lib/ABI/FunctionType/: Conversion.cpp  Distribution.h  Layout.cpp  Support.cpp
lib/DwarfImporter/: CMakeLists.txt  DwarfImporter.cpp
lib/EarlyFunctionAnalysis/: AnalyzeRegisterUsage.cpp  AttachDebugInfo.cpp  CMakeLists.txt  CollectCFG.cpp  DetectABI.cpp  EFA4.cpp  EarlyFunctionAnalysis.cpp  EmitCFG.cpp  FunctionSummaryOracle.cpp
lib/FunctionCallIdentification/: FunctionCallIdentification.cpp
lib/FunctionIsolation/: DropRoot.cpp  EnforceABI.cpp  InvokeIsolatedFunctions.cpp  IsolateFunctions.cpp  PromoteCSVs.cpp
lib/Lift/: AdvancedValueInfoPass.h  CMakeLists.txt  CPUStateAccessAnalysisPass.cpp  CodeGenerator.cpp  ExternalJumpsHandler.cpp  InstructionTranslator.cpp  InstructionTranslator.h  JumpTargetManager.cpp  Lift.cpp  LiftPipe.cpp  LinkSupportPipe.cpp  VariableManager.cpp  VariableManager.h
lib/Model/: Binary.cpp  CMakeLists.txt  ConvertFunctionType.cpp  Processing.cpp  Type.cpp  TypesDeduplication.cpp
lib/Model/Importer/Binary/: BinaryImporter.cpp  CMakeLists.txt  DwarfReader.h  ELF.cpp  ELFImporter.cpp  Importers.h  MachO.cpp  MachOImporter.cpp  MyFile.h  PECOFF.cpp  PECOFFImporter.cpp
lib/PTML/: Doxygen.cpp
lib/Pipeline/: Contract.cpp  ExecutionContext.cpp  GenericLLVMPipe.cpp  Loader.cpp  Runner.cpp  Step.cpp  Target.cpp
lib/PipelineC/: PipelineC.cpp
lib/Pipes/: CMakeLists.txt  FileContainer.cpp  IsolatedKind.cpp  LinkForTranslationPipe.cpp  PipelineManager.cpp  Pipes.cpp  RevngPipes.cpp
lib/Recompile/: CompileModulePipe.cpp  LinkForTranslationPipe.cpp
lib/StackAnalysis/: CMakeLists.txt  SegregateDirectStackAccesses.cpp  StackAnalysis.cpp
lib/Storage/: S3StorageClient.cpp
lib/Support/: CMakeLists.txt  ProgramCounterHandler.cpp  Progress.cpp
lib/Yield/: HexDump.cpp
lib/Yield/Pipes/: AssemblyPipes.cpp  CFGPipes.cpp  CallGraphPipes.cpp
python/: CMakeLists.txt
python/revng/api/: kind.py  manager.py
scripts/: compare-yaml  revng
scripts/revng_support/: support.py
scripts/revng_translate/: translate.py
scripts/tuple_tree_generator/: metaschema.yml  tuple-tree-generate-typescript.py
scripts/tuple_tree_generator/tuple_tree_generator/: __init__.py
share/revng/: support.c
share/revng/abi/: AAPCS.yml
share/revng/pipelines/: enforce-abi.yml  yield-call-graph.yml
tests/analysis/: AnalysisTests.cmake
tests/analysis/arm/: memset.yml
tests/pipeline/: StringContainerLibrary.cpp
tests/tools/Pipeline/: CMakeLists.txt  MultiStepPipelineTest.sh
tests/unit/: CMakeLists.txt  Model.cpp  Pipeline.cpp  PipelineC.cpp  UnitTests.cmake
tools/: CMakeLists.txt
tools/efa/extractcfg/: CMakeLists.txt  Main.cpp
tools/pipeline/: Main.cpp
tools/revng-lift/: CodeGenerator.cpp
tools/revng-pipeline/: Main.cpp
(+81 files in other folders)
